--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.blisssound">
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/iconapp"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/iconapp"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BlissSound"
         tools:targetApi="31">
         <activity
-            android:name="com.example.blisssound.ChatBotActivity"
+            android:name=".ChatBotActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.blisssound.HelpPageActivity"
+            android:name=".HelpPageActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.blisssound.BluetoothPageActivity"
+            android:name=".BluetoothPageActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.blisssound.GuidePageActivity"
+            android:name=".AboutPageActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.blisssound.AboutPageActivity"
+            android:name=".GuidePageActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.blisssound.MainActivity"
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
